force-app/main/default/objects/Appartment__c/Appartment__c.object-meta.xml
<CustomObject>
    <label>Teilobjekt</label>
    <nameField>
        <label>Appartment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teilobjekte</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>