force-app/main/default/objects/Appartment__c/fields/Additional_Costs__c.field-meta.xml
<CustomField>
    <fullName>Additional_Costs__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Inaktives Feld - kundenspezifische Incentivierung bitte künftig auf der VKC direkt hinterlegen.</inlineHelpText>
    <label>Additional Costs</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>