force-app/main/default/objects/Appartment__c/fields/AdditionalBrokerCommission__c.field-meta.xml
<CustomField>
    <fullName>AdditionalBrokerCommission__c</fullName>
    <label>Additional Broker Commission</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>