force-app/main/default/objects/Appartment__c/fields/Admin_Costs_Increase_After_Years__c.field-meta.xml
<CustomField>
    <fullName>Admin_Costs_Increase_After_Years__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Admin Costs Increase After Years</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>