force-app/main/default/objects/Appartment__c/fields/Admin_Costs_Increase_In__c.field-meta.xml
<CustomField>
    <fullName>Admin_Costs_Increase_In__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Admin Costs Increase In%</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>