force-app/main/default/objects/Appartment__c/fields/AFA_Amount__c.field-meta.xml
<CustomField>
    <fullName>AFA_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>AFA Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>