force-app/main/default/objects/Appartment__c/fields/Afa_Art__c.field-meta.xml
<CustomField>
    <fullName>Afa_Art__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Afa Art</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>