force-app/main/default/objects/Appartment__c/fields/AFA_Photovoltaic__c.field-meta.xml
<CustomField>
    <fullName>AFA_Photovoltaic__c</fullName>
    <description>Prozentwert der jählichen abschreibung der Photovoltaic-anlage</description>
    <label>AFA Photovoltaic</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>