force-app/main/default/objects/Appartment__c/fields/AfaProJahrInEuro__c.field-meta.xml
<CustomField>
    <fullName>AfaProJahrInEuro__c</fullName>
    <formula>Purchase_Price__c * Property__r.Building_Share_Value__c * Property__r.Afa_Building_Shares__c +
Purchase_Price__c * Property__r.Value_Plot__c * Property__r.Afa_Plot__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AfA Gesamt (volles Wirtschaftsjahr)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>