force-app/main/default/objects/Appartment__c/fields/Ancillary_Costs_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Ancillary_Costs_Monthly__c</fullName>
    <description>Nebenkosten Einnahmen im Monat</description>
    <formula>Property__r.Ancillary_Costs_Rate__c * Monthly_rent_sq_m__c * Area_sq_m__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Nebenkosten Einnahmen im Monat, berechnat nach Prozentsatz Property__r.Ancillary_Costs_Rate__c</inlineHelpText>
    <label>Ancillary Costs Monthly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>