force-app/main/default/objects/Appartment__c/fields/ApartmentNummer__c.field-meta.xml
<CustomField>
    <fullName>ApartmentNummer__c</fullName>
    <formula>LPAD(TEXT(VALUE(RIGHT(SUBSTITUTE(SUBSTITUTE(Name, &apos; (Renoviert)&apos;, &apos;&apos;), &apos; (Unrenoviert)&apos;, &apos;&apos;), 3))), 3, &apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apartment Nummer</label>
    <type>Text</type>
</CustomField>