force-app/main/default/objects/Appartment__c/fields/AppartmntId__c.field-meta.xml
<CustomField>
    <fullName>AppartmntId__c</fullName>
    <defaultValue>&quot; &quot;</defaultValue>
    <label>AppartmntId</label>
    <length>45</length>
    <type>Text</type>
</CustomField>