force-app/main/default/objects/Appartment__c/fields/Area_sq_m__c.field-meta.xml
<CustomField>
    <fullName>Area_sq_m__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Area (sq.m)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>