force-app/main/default/objects/Appartment__c/fields/Art__c.field-meta.xml
<CustomField>
    <fullName>Art__c</fullName>
    <formula>IF( TEXT(Property__r.Art_der_Teilobjekte__c) = &apos;Appartements&apos;, &apos;Appartement&apos;, 
IF( TEXT(Property__r.Art_der_Teilobjekte__c) = &apos;Wohnungen&apos;, &apos;Wohnung&apos;,
IF( TEXT(Property__r.Art_der_Teilobjekte__c) = &apos;Häuser&apos;, &apos;Haus&apos;,
IF( TEXT(Property__r.Art_der_Teilobjekte__c) = &apos;Ferienwohnungen&apos;, &apos;Ferienwohnung&apos;, &apos;&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Art</label>
    <type>Text</type>
</CustomField>