force-app/main/default/objects/Appartment__c/fields/Bettenanzahl__c.field-meta.xml
<CustomField>
    <fullName>Bettenanzahl__c</fullName>
    <label>Bettenanzahl</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>