force-app/main/default/objects/Appartment__c/fields/Beurkundung__c.field-meta.xml
<CustomField>
    <fullName>Beurkundung__c</fullName>
    <label>Beurkundung</label>
    <length>255</length>
    <type>Text</type>
</CustomField>