force-app/main/default/objects/Appartment__c/fields/Bezahlt__c.field-meta.xml
<CustomField>
    <fullName>Bezahlt__c</fullName>
    <label>Bezahlt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>