force-app/main/default/objects/Appartment__c/fields/BilledNotPaid__c.field-meta.xml
<CustomField>
    <fullName>BilledNotPaid__c</fullName>
    <formula>IF(KaufpreisFaellig__c,
			IF(AND(MaBVAbgerechnet__c &gt; 0,MaBVBezahlt__c &gt; 0),
						MaBVAbgerechnet__c - MaBVBezahlt__c,
						IF(AND(MaBVAbgerechnet__c &gt; 0,Bezahlt__c=0),
									MaBVAbgerechnet__c - MaBVBezahlt__c,
									IF(
													(ISPICKVAL(Property__r.Kaufpreiszahlung__c,&quot;MaBV&quot;) || ISPICKVAL(Property__r.Kaufpreiszahlung__c,&quot;Externes Vertriebsprojekt (MaBV)&quot;)),
													IF(Property__r.FORMULA_AktuelleMaBVRate_Num__c=7,beurkundeter_Kaufpreis__c - Bezahlt__c,0),
													beurkundeter_Kaufpreis__c - Bezahlt__c
									))
						),
			0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abgerechnet, nicht Bezahlt (€)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>