force-app/main/default/objects/Appartment__c/fields/BZAVorhanden__c.field-meta.xml
<CustomField>
    <fullName>BZAVorhanden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BZA vorhanden</label>
    <type>Checkbox</type>
</CustomField>