force-app/main/default/objects/Appartment__c/fields/ClosingBonus__c.field-meta.xml
<CustomField>
    <fullName>ClosingBonus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closing Bonus</label>
    <type>Checkbox</type>
</CustomField>