force-app/main/default/objects/Appartment__c/fields/ContingentRequester__c.field-meta.xml
<CustomField>
    <fullName>ContingentRequester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Requester of contingent this appartment is part of</description>
    <label>Contingent Requester</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Appartments (Contingent)</relationshipLabel>
    <relationshipName>AppartmentsContingent</relationshipName>
    <type>Lookup</type>
</CustomField>