force-app/main/default/objects/Appartment__c/fields/Cost_Admin__c.field-meta.xml
<CustomField>
    <fullName>Cost_Admin__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cost Admin</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>