force-app/main/default/objects/Appartment__c/fields/CurrentMaBVRate__c.field-meta.xml
<CustomField>
    <fullName>CurrentMaBVRate__c</fullName>
    <label>Aktuelle MABV Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>