force-app/main/default/objects/Appartment__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Teilobjekte (Customer)</relationshipLabel>
    <relationshipName>gekaufte_Appartments</relationshipName>
    <type>Lookup</type>
</CustomField>