force-app/main/default/objects/Appartment__c/fields/Date_Of_Transfer_Of_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Transfer_Of_Ownership__c</fullName>
    <label>Date Of Transfer Of Ownership</label>
    <type>Date</type>
</CustomField>