force-app/main/default/objects/Appartment__c/fields/Depreciation_Start__c.field-meta.xml
<CustomField>
    <fullName>Depreciation_Start__c</fullName>
    <label>Depreciation Start</label>
    <type>Date</type>
</CustomField>