force-app/main/default/objects/Appartment__c/fields/Depreciation_Value__c.field-meta.xml
<CustomField>
    <fullName>Depreciation_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Depreciation Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>