force-app/main/default/objects/Appartment__c/fields/DeviatingPurchasePrice__c.field-meta.xml
<CustomField>
    <fullName>DeviatingPurchasePrice__c</fullName>
    <label>Abweichender Kaufpreis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>