force-app/main/default/objects/Appartment__c/fields/Device_AFA__c.field-meta.xml
<CustomField>
    <fullName>Device_AFA__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Device (% AFA)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>