force-app/main/default/objects/Appartment__c/fields/DmsOrdnerErstellen__c.field-meta.xml
<CustomField>
    <fullName>DmsOrdnerErstellen__c</fullName>
    <defaultValue>true</defaultValue>
    <label>DMS Ordner erstellen</label>
    <type>Checkbox</type>
</CustomField>