force-app/main/default/objects/Appartment__c/fields/DmsOrdnerErstellt__c.field-meta.xml
<CustomField>
    <fullName>DmsOrdnerErstellt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DMS Ordner erstellt</label>
    <type>Checkbox</type>
</CustomField>