force-app/main/default/objects/Appartment__c/fields/EndkundenrenditeIst__c.field-meta.xml
<CustomField>
    <fullName>EndkundenrenditeIst__c</fullName>
    <formula>if(Erbbauzins__c == NULL, 
			if(OeffentlicherStatus__c == &apos;Verkauft&apos;, 
						Monthly_Rent__c *12 /beurkundeter_Kaufpreis__c,
						Monthly_Rent__c *12 /Purchase_Price__c 
						), 
			if(OeffentlicherStatus__c == &apos;Verkauft&apos;, 
						(Monthly_Rent__c *12-Erbauzins_Monat__c*12) /beurkundeter_Kaufpreis__c,
						(Monthly_Rent__c *12-Erbauzins_Monat__c*12) /Purchase_Price__c 
						)
		)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Endkundenrendite Ist</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>