force-app/main/default/objects/Appartment__c/fields/Erbauzins_Monat__c.field-meta.xml
<CustomField>
    <fullName>Erbauzins_Monat__c</fullName>
    <formula>Property__r.Erbauzins_Faktor__c * Area_sq_m__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Erbauzins  Monat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>