force-app/main/default/objects/Appartment__c/fields/Erbbauzins__c.field-meta.xml
<CustomField>
    <fullName>Erbbauzins__c</fullName>
    <label>Erbbauzins</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>