force-app/main/default/objects/Appartment__c/fields/Ertrag_WH__c.field-meta.xml
<CustomField>
    <fullName>Ertrag_WH__c</fullName>
    <label>Ertrag CS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>