force-app/main/default/objects/Appartment__c/fields/ExternNichtAnzeigen__c.field-meta.xml
<CustomField>
    <fullName>ExternNichtAnzeigen__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Wenn dies angehakt ist, wird das Apartment nicht auf der Website, im Immoframe und im VP angezeigt.</description>
    <inlineHelpText>Wenn dies angehakt ist, wird das Apartment nicht auf der Website, im Immoframe und im VP angezeigt.</inlineHelpText>
    <label>Extern nicht anzeigen</label>
    <type>Checkbox</type>
</CustomField>