force-app/main/default/objects/Appartment__c/fields/FifthMabvInvoice__c.field-meta.xml
<CustomField>
    <fullName>FifthMabvInvoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>5. MaBV Rechnung</label>
    <referenceTo>MaBVRechnung__c</referenceTo>
    <relationshipLabel>Teilobjekte (5. MaBV Rechnung)</relationshipLabel>
    <relationshipName>TeilobjekteFifthMabvInvoice</relationshipName>
    <type>Lookup</type>
</CustomField>