force-app/main/default/objects/Appartment__c/fields/Financing_Costs__c.field-meta.xml
<CustomField>
    <fullName>Financing_Costs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Financing Costs (%)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>