force-app/main/default/objects/Appartment__c/fields/FirstMabvInvoice__c.field-meta.xml
<CustomField>
    <fullName>FirstMabvInvoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>1. MaBV Rechnung</label>
    <referenceTo>MaBVRechnung__c</referenceTo>
    <relationshipLabel>Teilobjekte (1. MaBV Rechnung)</relationshipLabel>
    <relationshipName>TeilobjekteFirstMabvInvoice</relationshipName>
    <type>Lookup</type>
</CustomField>