force-app/main/default/objects/Appartment__c/fields/FlaecheQmText__c.field-meta.xml
<CustomField>
    <fullName>FlaecheQmText__c</fullName>
    <formula>SUBSTITUTE(TEXT(  ROUND(Area_sq_m__c,2) ), &apos;.&apos;, &apos;,&apos;)   + &quot; m²&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fläche qm Text</label>
    <type>Text</type>
</CustomField>