force-app/main/default/objects/Appartment__c/fields/FourthMabvInvoice__c.field-meta.xml
<CustomField>
    <fullName>FourthMabvInvoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>4. MaBV Rechnung</label>
    <referenceTo>MaBVRechnung__c</referenceTo>
    <relationshipLabel>Teilobjekte (4. MaBV Rechnung)</relationshipLabel>
    <relationshipName>TeilobjekteFourthMabvInvoice</relationshipName>
    <type>Lookup</type>
</CustomField>