force-app/main/default/objects/Appartment__c/fields/Gesamtkosten__c.field-meta.xml
<CustomField>
    <fullName>Gesamtkosten__c</fullName>
    <formula>Purchase_Price__c +   Property__r.Real_Estate_Transfer_Tax__c  * Purchase_Price__c + Purchase_Price__c *  Property__r.Notary_And_Court_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gesamtkosten</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>