force-app/main/default/objects/Appartment__c/fields/GesicherteKfWMittel__c.field-meta.xml
<CustomField>
    <fullName>GesicherteKfWMittel__c</fullName>
    <label>Gesicherte KfW-Mittel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>