force-app/main/default/objects/Appartment__c/fields/GrundschuldIstBestellt__c.field-meta.xml
<CustomField>
    <fullName>GrundschuldIstBestellt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grundschuld ist bestellt</label>
    <type>Checkbox</type>
</CustomField>