force-app/main/default/objects/Appartment__c/fields/Increase_In_Value__c.field-meta.xml
<CustomField>
    <fullName>Increase_In_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Increase In Value</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>