force-app/main/default/objects/Appartment__c/fields/Increase_in_Value_For_Years__c.field-meta.xml
<CustomField>
    <fullName>Increase_in_Value_For_Years__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Increase in Value For Years</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>