force-app/main/default/objects/Appartment__c/fields/Increase_In_Value_In__c.field-meta.xml
<CustomField>
    <fullName>Increase_In_Value_In__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Increase In Value In%</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>