force-app/main/default/objects/Appartment__c/fields/Instandhaltung__c.field-meta.xml
<CustomField>
    <fullName>Instandhaltung__c</fullName>
    <formula>Property__r.Maintenance_Cost_Increase_After_Years__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instandhaltungskostenst. nach Jahren</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>