force-app/main/default/objects/Appartment__c/fields/Instandhaltungskostenst_percent__c.field-meta.xml
<CustomField>
    <fullName>Instandhaltungskostenst_percent__c</fullName>
    <formula>Property__r.Percent_Increase_In_Maintenance_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instandhaltungskostenst. (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>