force-app/main/default/objects/Appartment__c/fields/Jahresmiete__c.field-meta.xml
<CustomField>
    <fullName>Jahresmiete__c</fullName>
    <formula>Monthly_Rent__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jahresmiete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>