force-app/main/default/objects/Appartment__c/fields/Kaufpreis_gezahlt_am__c.field-meta.xml
<CustomField>
    <fullName>Kaufpreis_gezahlt_am__c</fullName>
    <label>Kaufpreis gezahlt am</label>
    <type>Date</type>
</CustomField>