force-app/main/default/objects/Appartment__c/fields/KaufpreisFaellig__c.field-meta.xml
<CustomField>
    <fullName>KaufpreisFaellig__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kaufpreis fällig</label>
    <type>Checkbox</type>
</CustomField>