force-app/main/default/objects/Appartment__c/fields/KaufpreisFormel__c.field-meta.xml
<CustomField>
    <fullName>KaufpreisFormel__c</fullName>
    <formula>ROUND(Purchase_Price__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kaufpreis (Formel)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>