force-app/main/default/objects/Appartment__c/fields/KaufpreisIst__c.field-meta.xml
<CustomField>
    <fullName>KaufpreisIst__c</fullName>
    <formula>IF(!IsBlank(beurkundeter_Kaufpreis__c) &amp;&amp; TEXT(Status__c) = &apos;Sold&apos;,  beurkundeter_Kaufpreis__c,  Purchase_Price__c)</formula>
    <label>Kaufpreis Ist</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>