force-app/main/default/objects/Appartment__c/fields/KontingentReserviertBis__c.field-meta.xml
<CustomField>
    <fullName>KontingentReserviertBis__c</fullName>
    <label>Kontingent reserviert bis</label>
    <type>DateTime</type>
</CustomField>