force-app/main/default/objects/Appartment__c/fields/Kosten_Provision_inkl_Rabatt__c.field-meta.xml
<CustomField>
    <fullName>Kosten_Provision_inkl_Rabatt__c</fullName>
    <label>Kosten Provision inkl Rabatt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>