force-app/main/default/objects/Appartment__c/fields/Kumulierte_Provision_extern__c.field-meta.xml
<CustomField>
    <fullName>Kumulierte_Provision_extern__c</fullName>
    <label>Kumulierte Provision extern</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>