force-app/main/default/objects/Appartment__c/fields/Land_AFA__c.field-meta.xml
<CustomField>
    <fullName>Land_AFA__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Land (% AFA)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>