force-app/main/default/objects/Appartment__c/fields/LetztePhasenaenderungFA__c.field-meta.xml
<CustomField>
    <fullName>LetztePhasenaenderungFA__c</fullName>
    <label>Letzte Phasenänderung FA</label>
    <type>DateTime</type>
</CustomField>