force-app/main/default/objects/Appartment__c/fields/MaBVAbgerechnet__c.field-meta.xml
<CustomField>
    <fullName>MaBVAbgerechnet__c</fullName>
    <label>MaBV abgerechnet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>