force-app/main/default/objects/Appartment__c/fields/MaBVBezahlt__c.field-meta.xml
<CustomField>
    <fullName>MaBVBezahlt__c</fullName>
    <label>MaBV Bezahlt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>