force-app/main/default/objects/Appartment__c/fields/Maintenance_sqm__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_sqm__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Maintenance sqm</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>