force-app/main/default/objects/Appartment__c/fields/Makler__c.field-meta.xml
<CustomField>
    <fullName>Makler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Makler</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Teilobjekte</relationshipLabel>
    <relationshipName>Teilobjekte</relationshipName>
    <type>Lookup</type>
</CustomField>