force-app/main/default/objects/Appartment__c/fields/Maklerbetreuer_Wirtschaftshaus__c.field-meta.xml
<CustomField>
    <fullName>Maklerbetreuer_Wirtschaftshaus__c</fullName>
    <label>Maklerbetreuer Carestone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>