force-app/main/default/objects/Appartment__c/fields/Maklerbetreuer_WirtschaftsHaus_lookup__c.field-meta.xml
<CustomField>
    <fullName>Maklerbetreuer_WirtschaftsHaus_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maklerbetreuer Carestone</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Teilobjekte (Maklerbetreuer WirtschaftsHaus)</relationshipLabel>
    <relationshipName>Teilobjekte1</relationshipName>
    <type>Lookup</type>
</CustomField>