force-app/main/default/objects/Appartment__c/fields/Maklercourtage__c.field-meta.xml
<CustomField>
    <fullName>Maklercourtage__c</fullName>
    <formula>( Purchase_Price__c +  Value_Parking_Space__c ) * Property__r.Maklercourtage_p__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maklercourtage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>