force-app/main/default/objects/Appartment__c/fields/MarkedForReservation__c.field-meta.xml
<CustomField>
    <fullName>MarkedForReservation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MarkedForReservation</label>
    <type>Checkbox</type>
</CustomField>