force-app/main/default/objects/Appartment__c/fields/MarketingzuschussUSt__c.field-meta.xml
<CustomField>
    <fullName>MarketingzuschussUSt__c</fullName>
    <formula>ROUND( MarketingzuschussNetto__c, 2) * 0.19</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketingzuschuss USt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>